// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
  href={null}
  id="storyshots_186"
  media=""
  onClick={null}
>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
    id="storyshots_186-Header"
    onClick={null}
  >
    <div
      className="Bar__BarLayout-icfo76-2 eUVQsH"
      id={null}
      onClick={null}
    >
      <div
        className="Bar__Slot-icfo76-1 RjiBe"
      >
        <h4
          className="Typography__TitleText-sc-19auepv-2 dDJKKW"
          fontSize="1.35rem"
          fontWeight="400"
          letterSpacing="0px"
        >
          Clear and Specific Title
        </h4>
      </div>
    </div>
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
    id="storyshots_186-Body"
    onClick={null}
  >
    <p
      className="Typography__Paragraph-sc-19auepv-3 dBAreK"
      fontSize="1rem"
      fontWeight={400}
      id={null}
      letterSpacing="0.5px"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </p>
  </section>
  <section
    className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
    id={null}
    onClick={null}
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
      id={null}
      rows={null}
    >
      <button
        className="Button__StyledButton-sc-1v7sls2-0 duxIaX DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
        disabled={false}
        htmlFor={null}
        id="Negative"
        name="Negative"
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
          >
            Negative
          </label>
        </section>
      </button>
      <button
        className="Button__StyledButton-sc-1v7sls2-0 dhrQhU DialogBox__SecondaryButton-iv0dnf-4 RChLi"
        disabled={false}
        htmlFor={null}
        id="Affirmative"
        name="Affirmative"
        onClick={null}
        tabIndex="1"
        type="button"
      >
        <section
          className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
          id={null}
          rows={null}
        >
          <label
            className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
            fontSize="1rem"
            fontWeight={400}
            htmlFor={null}
            letterSpacing=".5px"
          >
            Affirmative
          </label>
        </section>
      </button>
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb"
  id={null}
  rows={null}
>
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eizlsd"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
        href={null}
        id="storyshots_187"
        media=""
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_187-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <h4
                className="Typography__TitleText-sc-19auepv-2 dDJKKW"
                fontSize="1.35rem"
                fontWeight="400"
                letterSpacing="0px"
              >
                Are you sure?
              </h4>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_187-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            Are you sure you want to delete all of your user data? You will never be able to get it back.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 duxIaX DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  No
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 dhrQhU DialogBox__SecondaryButton-iv0dnf-4 RChLi"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Yes
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eizlsd"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
        href={null}
        id="storyshots_188"
        media=""
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_188-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <h4
                className="Typography__TitleText-sc-19auepv-2 dDJKKW"
                fontSize="1.35rem"
                fontWeight="400"
                letterSpacing="0px"
              >
                Reset Settings?
              </h4>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_188-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 duxIaX DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Accept
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 dhrQhU DialogBox__SecondaryButton-iv0dnf-4 RChLi"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Cancel
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 kWRDZo"
        color="success80"
        data-icon="check"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
        href={null}
        id="storyshots_189"
        media=""
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_189-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <h4
                className="Typography__TitleText-sc-19auepv-2 dDJKKW"
                fontSize="1.35rem"
                fontWeight="400"
                letterSpacing="0px"
              >
                Reset Settings?
              </h4>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_189-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 duxIaX DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Cancel
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 dhrQhU DialogBox__SecondaryButton-iv0dnf-4 RChLi"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Accept
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>
</section>
`;

exports[` 3`] = `
Array [
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eizlsd"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
        href={null}
        id="storyshots_190"
        media=""
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_190-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <h4
                className="Typography__TitleText-sc-19auepv-2 dDJKKW"
                fontSize="1.35rem"
                fontWeight="400"
                letterSpacing="0px"
              >
                Reset Settings?
              </h4>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_190-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 ijaYPf DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  No
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 jSJvUK DialogBox__SecondaryButton-iv0dnf-4 RChLi"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Agree
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>,
  <div
    className="Bar__BarLayout-icfo76-2 eIFIfS"
    id={null}
    onClick={null}
  >
    <div
      className="Bar__Slot-icfo76-1 hCkezQ"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-times fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 eizlsd"
        color="alert80"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        fontSize="1.35em"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </div>
    <div
      className="Bar__Slot-icfo76-1 yvaBx"
    >
      <div
        className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
        href={null}
        id="storyshots_191"
        media=""
        onClick={null}
      >
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_191-Header"
          onClick={null}
        >
          <div
            className="Bar__BarLayout-icfo76-2 eUVQsH"
            id={null}
            onClick={null}
          >
            <div
              className="Bar__Slot-icfo76-1 RjiBe"
            >
              <h4
                className="Typography__TitleText-sc-19auepv-2 dDJKKW"
                fontSize="1.35rem"
                fontWeight="400"
                letterSpacing="0px"
              >
                Reset Settings?
              </h4>
            </div>
          </div>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
          id="storyshots_191-Body"
          onClick={null}
        >
          <p
            className="Typography__Paragraph-sc-19auepv-3 dBAreK"
            fontSize="1rem"
            fontWeight={400}
            id={null}
            letterSpacing="0.5px"
          >
            This will reset your account to it's default fasctory settings removing all current user preferences.
          </p>
        </section>
        <section
          className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
          id={null}
          onClick={null}
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
            id={null}
            rows={null}
          >
            <button
              className="Button__StyledButton-sc-1v7sls2-0 duxIaX DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
              disabled={false}
              htmlFor={null}
              id="Negative"
              name="Negative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  No
                </label>
              </section>
            </button>
            <button
              className="Button__StyledButton-sc-1v7sls2-0 jSJvUK DialogBox__SecondaryButton-iv0dnf-4 RChLi"
              disabled={false}
              htmlFor={null}
              id="Affirmative"
              name="Affirmative"
              onClick={null}
              tabIndex="1"
              type="button"
            >
              <section
                className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
                id={null}
                rows={null}
              >
                <label
                  className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
                  fontSize="1rem"
                  fontWeight={400}
                  htmlFor={null}
                  letterSpacing=".5px"
                >
                  Agree
                </label>
              </section>
            </button>
          </section>
        </section>
      </div>
    </div>
  </div>,
]
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 hDFGtQ Card__CardGridWrapper-sc-1g3s676-4 cvDlTr"
  id={null}
  rows={null}
>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
    href={null}
    id="storyshots_192"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_192-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Default Dialog
          </h4>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_192-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 duxIaX DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 dhrQhU DialogBox__SecondaryButton-iv0dnf-4 RChLi"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
    href={null}
    id="storyshots_193"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_193-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Successful Dialog
          </h4>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_193-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 gcEfQr DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 jSJvUK DialogBox__SecondaryButton-iv0dnf-4 RChLi"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
  <div
    className="CardWrapper__StyledCardWrapper-meln7c-0 iWuTVd Card__StyledCardWrapper-sc-1g3s676-3 kkMfvg DialogBox__DialogCard-iv0dnf-1 eLwRLb"
    href={null}
    id="storyshots_194"
    media=""
    onClick={null}
  >
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_194-Header"
      onClick={null}
    >
      <div
        className="Bar__BarLayout-icfo76-2 eUVQsH"
        id={null}
        onClick={null}
      >
        <div
          className="Bar__Slot-icfo76-1 RjiBe"
        >
          <h4
            className="Typography__TitleText-sc-19auepv-2 dDJKKW"
            fontSize="1.35rem"
            fontWeight="400"
            letterSpacing="0px"
          >
            Error Dialog
          </h4>
        </div>
      </div>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 ixRIWF"
      id="storyshots_194-Body"
      onClick={null}
    >
      <p
        className="Typography__Paragraph-sc-19auepv-3 dBAreK"
        fontSize="1rem"
        fontWeight={400}
        id={null}
        letterSpacing="0.5px"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
    </section>
    <section
      className="Card__CardSectionWrapper-sc-1g3s676-1 Skgmv"
      id={null}
      onClick={null}
    >
      <section
        className="Grid__GridWrapper-sc-1ntp7gx-0 fyTJwb DialogBox__ButtonGrid-iv0dnf-0 gQulqd"
        id={null}
        rows={null}
      >
        <button
          className="Button__StyledButton-sc-1v7sls2-0 ijaYPf DialogBox__PrimaryButton-iv0dnf-3 kFUBVj"
          disabled={false}
          htmlFor={null}
          id="Negative"
          name="Negative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Negative
            </label>
          </section>
        </button>
        <button
          className="Button__StyledButton-sc-1v7sls2-0 gujtSI DialogBox__SecondaryButton-iv0dnf-4 RChLi"
          disabled={false}
          htmlFor={null}
          id="Affirmative"
          name="Affirmative"
          onClick={null}
          tabIndex="1"
          type="button"
        >
          <section
            className="Grid__GridWrapper-sc-1ntp7gx-0 jylWBN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
            id={null}
            rows={null}
          >
            <label
              className="Typography__StyledLabel-sc-19auepv-0 eSOoNI"
              fontSize="1rem"
              fontWeight={400}
              htmlFor={null}
              letterSpacing=".5px"
            >
              Affirmative
            </label>
          </section>
        </button>
      </section>
    </section>
  </div>
</section>
`;
